--- a/busstops/templates/motd_partial.html
+++ b/busstops/templates/motd_partial.html
@@ -13,7 +13,7 @@
         })
     }
     function fetchAprilQuote() {
-        $.getJSON("https://eden.apilogic.uk/quotes/random?tags=tb-april&published=true", function (quotes) {
+        $.getJSON("https://eden.apilogic.uk/quotes/random?tags=april-one&published=true", function (quotes) {
             if (quotes.length === 0) {
                 $(".quote-text").text(" ")
                 return;
