Seal being Seal

--- a/api/templates/rest_framework/api.html
+++ b/api/templates/rest_framework/api.html
@@ -3,5 +3,5 @@
 {% block title %}{% if name %}{{ name }} – {% endif %}API – transportthing.uk{% endblock %}
 
 {% block branding %}
-    <a class='navbar-brand' href='/'>transportthing.uk</a>
+    <a class='navbar-brand' href='/api/'>transportthing.uk</a>
 {% endblock branding %}
