--- a/api/templates/rest_framework/api.html
+++ b/api/templates/rest_framework/api.html
@@ -3,5 +3,9 @@
 {% block title %}{% if name %}{{ name }} – {% endif %}API – transportthing.uk{% endblock %}
 
 {% block branding %}
-    <a class='navbar-brand' href='/api/'>transportthing.uk</a>
+    <a class="navbar-brand" href="/" style="display: flex; align-items: center;">
+        <img src="https://cdn.transportthing.uk/default_dark_logo.svg"
+             alt="It appears this logo isn't loading."
+             style="height: 40px; display: inline-block; vertical-align: middle;">
+    </a>
 {% endblock branding %}
