--- a/api/templates/rest_framework/api.html
+++ b/api/templates/rest_framework/api.html
@@ -9,3 +9,13 @@
              style="height: 40px; display: inline-block; vertical-align: middle;">
     </a>
 {% endblock branding %}
+
+{% block style %}
+    {{ block.super }}
+    <style>
+        .navbar.navbar-static-top {
+            background: url("https://cdn.transportthing.uk/default_dark_banner_v2.svg") no-repeat center center;
+            background-size: cover;
+        }
+    </style>
+{% endblock style %}
