i may be stupid

--- a/api/templates/rest_framework/api.html
+++ b/api/templates/rest_framework/api.html
@@ -14,7 +14,7 @@
     {{ block.super }}
     <style>
         .navbar.navbar-static-top {
-            background: url("https://cdn.transportthing.uk/default_dark_banner_v2.svg") no-repeat center center;
+            background: url("https://cdn.transportthing.uk/default_dark_banner_v2.svg") no-repeat left center;
             background-size: cover;
         }
     </style>
