--- a/api/templates/rest_framework/api.html
+++ b/api/templates/rest_framework/api.html
@@ -4,7 +4,7 @@
 
 {% block branding %}
     <a class="navbar-brand" href="/" style="display: flex; align-items: center;">
-        <img src="https://cdn.transportthing.uk/default_dark_logo.svg"
+        <img src="https://github.com/midlanderwolf/logoimagehosting/raw/refs/heads/main/transportthing_temp/TTAPILOGO.svg"
              alt="It appears this logo isn't loading."
              style="height: 40px; display: inline-block; vertical-align: middle;">
     </a>
@@ -14,7 +14,7 @@
     {{ block.super }}
     <style>
         .navbar.navbar-static-top {
-            background: url("https://cdn.transportthing.uk/default_dark_banner_v2.svg") no-repeat left center;
+            background: url("https://github.com/midlanderwolf/logoimagehosting/raw/refs/heads/main/transportthing_temp/TTAPIBANNER.svg") no-repeat left center;
             background-size: cover;
         }
     </style>
