--- a/busstops/templates/departures.html
+++ b/busstops/templates/departures.html
@@ -21,7 +21,7 @@
                     </table>
                 {% endif %}
                 {% if item.time and item.time.date != today %}
-                    <h3>{{ item.time|date:"l j f" }}</h3>
+                    <h3>{{ item.time|date:"l j F" }}</h3>
                 {% endif %}
                 <table>
                 <tbody>
