--- a/busstops/templates/motd_partial.html
+++ b/busstops/templates/motd_partial.html
@@ -9,7 +9,7 @@
             $(".quote-source").text(quotes.author)
             $(".quote-text").html(quotes.text)
         }).fail(function () {
-            $(".quote-text").text("Katsune : Iyaaaa API Brokey :3")
+            $(".quote-text").text("Katsune : Iyaaaa API Brokey :3 *barks violently*")
         })
     }
     function fetchAprilQuote() {
@@ -21,7 +21,7 @@
             $(".quote-source").text(quotes.author)
             $(".quote-text").html(quotes.text)
         }).fail(function () {
-            $(".quote-text").text("Calico : Ha Get Fucked I'm Here Now!")
+            $(".quote-text").text("Calico : Ha Get Fucked I'm Here Now! *proceeds to bite cables*")
         })
     }
 
