update admin site colouring

--- a/busstops/templates/admin/base_site.html
+++ b/busstops/templates/admin/base_site.html
@@ -36,5 +36,11 @@
         #site-name a {
             color: white;
         }
+        .module h2, .module caption, .inline-group h2 {
+            background: #314F77;
+        }
+        a:link a:visited {
+            color: #90B0D4;
+        }
     </style>
 {% endblock extrahead %}
